# nilpoint_core

./: .gitignore  pyproject.toml
src/nilpoint/: views.py
src/nilpoint/migrations/: 0010_game_nilpoint_slug.py
src/nilpoint/templates/nilpoint/: game_landing.jinja2  player_info.jinja2  player_location_panel.jinja2
